# carbon-aware-ai-agents

./: .gitattributes  .gitignore  LICENSE
docs/: api-schemas.md  project-brief.md  system_component_design.md
model-load-api/: README.md  app.py  graph_stuff.py  history.json  notes.txt  openapi.yaml
model-predict/: predictor.py
scheduler/: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  DatacenterSpecificInformation.cpp  DatacenterSpecificInformation.hpp  JobRequest.hpp  PredictedDatacenterInformation.cpp  PredictedDatacenterInformation.hpp  PredictionApi.cpp  PredictionApi.hpp  README.md  ScheduleForDatacenter.cpp  ScheduleForDatacenter.hpp  ScheduledInterval.hpp  Scheduler.cpp  Scheduler.hpp  index.html  main.cpp  toolchain-notes.md
scheduler/local-overlays/python3/: vcpkg.json
scheduler/src/: DatacenterSpecificInformation.hpp  JobRequest.hpp  PredictedDatacenterInformation.hpp  PredictionApi.cpp  PredictionApi.hpp  ScheduleForDatacenter.cpp  ScheduleForDatacenter.hpp  ScheduledInterval.cpp  ScheduledInterval.hpp  Scheduler.cpp  Scheduler.hpp
stats/: app.py  generate_history.py  predictor.py  test_prediction_graphs.py
ui/: requirements.txt
webapp/: main.py  openapi.yaml
